<resources>
  <string name="smartappupdate_later">Plus tard</string>
  <string name="smartappupdate_update_title">Mettez à jour votre app</string>
  <string name="smartappupdate_update_content">Nous vous informons qu\'une nouvelle version de l\'application est disponible</string>
  <string name="smartappupdate_update_button_label">Mettre à jour</string>

  <string name="smartappupdate_update_popup_height">.9</string>
  <string name="smartappupdate_update_popup_width">.9</string>
  <string name="smartappupdate_close_image_description">Close button</string>
  <string name="smartappupdate_update_image_description">Update image</string>
</resources>
