<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/smartappupdate_white_semi_translucide"
  tools:ignore="MissingPrefix"
>
  <RelativeLayout
    style="@style/smartappupdate_CardStyle"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center">

      <ImageView
        android:id="@+id/closeButton"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:contentDescription="@string/smartappupdate_close_image_description"
        android:padding="15dip"
        android:src="@drawable/smartappupdate_ic_close"
        android:tint="@color/smartappupdate_gray"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
      />

      <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/smartappupdate_update_title"
        android:textColor="@color/smartappupdate_dark_pink"
        android:textSize="22sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeButton"
        app:layout_goneMarginTop="10dip"
      />

      <!-- This LinearLayout is needed to vertically center the scrollview -->
      <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        app:layout_constraintBottom_toTopOf="@+id/actionButton"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_default="spread"
      >
        <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:overScrollMode="never"
        >
          <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
          >
            <ImageView
              android:id="@+id/image"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:adjustViewBounds="true"
              android:contentDescription="@string/smartappupdate_update_image_description"
              android:minHeight="150dp"
              android:visibility="gone"
              tools:background="@color/smartappupdate_blue"
              tools:visibility="visible"
            />

            <TextView
              android:id="@+id/paragraph"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginEnd="10dip"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:layout_marginStart="10dip"
              android:layout_marginTop="0dp"
              android:gravity="center_horizontal"
              android:padding="10dip"
              android:text="@string/smartappupdate_update_content"
              android:textColor="@color/smartappupdate_very_dark_gray"
              android:textSize="15sp"
              tools:text="@tools:sample/lorem/random"
              tools:textSize="25sp"
            />
          </LinearLayout>
        </ScrollView>
      </LinearLayout>

      <TextView
        android:id="@+id/actionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:layout_marginEnd="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginStart="20dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/smartappupdate_blue_rnd_btn"
        android:gravity="center_horizontal"
        android:paddingBottom="15dip"
        android:paddingEnd="70dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingStart="70dp"
        android:paddingTop="15dip"
        android:text="@string/smartappupdate_update_button_label"
        android:textColor="@color/smartappupdate_white"
        android:textSize="18sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/laterButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
      />

      <TextView
        android:id="@+id/laterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:padding="15dip"
        android:text="@string/smartappupdate_later"
        android:textColor="@color/smartappupdate_very_dark_gray"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/actionButton"
        app:layout_constraintRight_toRightOf="@id/actionButton"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
